{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 192,
  "lineage": "d0e1a2ef-a328-ce97-1404-d064eda41115",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0134746d1c615f4fa",
            "arn": "arn:aws:ec2:us-east-2:880147167393:elastic-ip/eipalloc-0134746d1c615f4fa",
            "association_id": "eipassoc-076770a3e5c45dabf",
            "domain": "vpc",
            "id": "eipalloc-0134746d1c615f4fa",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a984fedd7706dc65",
            "private_dns": "ip-10-1-0-157.us-east-2.compute.internal",
            "private_ip": "10.1.0.157",
            "public_dns": "ec2-18-216-184-93.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.184.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:internet-gateway/igw-07378ed26f9842eb6",
            "id": "igw-07378ed26f9842eb6",
            "owner_id": "880147167393",
            "tags": {
              "Name": "VPC-IGW"
            },
            "tags_all": {
              "Name": "VPC-IGW"
            },
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ECS_NLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:880147167393:loadbalancer/net/ECS-NLB/d3cf51d66c8d1e56",
            "arn_suffix": "net/ECS-NLB/d3cf51d66c8d1e56",
            "dns_name": "ECS-NLB-d3cf51d66c8d1e56.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:880147167393:loadbalancer/net/ECS-NLB/d3cf51d66c8d1e56",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "ECS-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8ec08c744c524c4"
              }
            ],
            "subnets": [
              "subnet-0b8ec08c744c524c4"
            ],
            "vpc_id": "vpc-0c136aad7d8da35f3",
            "zone_id": "ZLMOA37VPKANP"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.existing_private",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ECS_NLB_Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:880147167393:listener/net/ECS-NLB/d3cf51d66c8d1e56/4e122db7cab5b90f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:880147167393:targetgroup/ECS-TG/0481525de7895d1d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:880147167393:listener/net/ECS-NLB/d3cf51d66c8d1e56/4e122db7cab5b90f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:880147167393:loadbalancer/net/ECS-NLB/d3cf51d66c8d1e56",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ECS_NLB",
            "aws_lb_target_group.ECS_TG",
            "aws_subnet.existing_private",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ECS_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:880147167393:targetgroup/ECS-TG/0481525de7895d1d",
            "arn_suffix": "targetgroup/ECS-TG/0481525de7895d1d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:880147167393:targetgroup/ECS-TG/0481525de7895d1d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:880147167393:loadbalancer/net/ECS-NLB/d3cf51d66c8d1e56"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ECS-TG",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0134746d1c615f4fa",
            "association_id": "eipassoc-076770a3e5c45dabf",
            "connectivity_type": "public",
            "id": "nat-07f29c38570b808f6",
            "network_interface_id": "eni-0a984fedd7706dc65",
            "private_ip": "10.1.0.157",
            "public_ip": "18.216.184.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0528f53b9f30ec4b7",
            "tags": {
              "Name": "NAT-Gateway"
            },
            "tags_all": {
              "Name": "NAT-Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.existing_public",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "NAT_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b06b7b85ec24fa181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07f29c38570b808f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b06b7b85ec24fa18",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.existing_public",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07378ed26f9842eb6",
            "id": "r-rtb-072788fbd3fa567951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072788fbd3fa56795",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:route-table/rtb-0b06b7b85ec24fa18",
            "id": "rtb-0b06b7b85ec24fa18",
            "owner_id": "880147167393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f29c38570b808f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT2"
            },
            "tags_all": {
              "Name": "RT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:route-table/rtb-072788fbd3fa56795",
            "id": "rtb-072788fbd3fa56795",
            "owner_id": "880147167393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07378ed26f9842eb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT"
            },
            "tags_all": {
              "Name": "publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b788138d0aca0d4b",
            "route_table_id": "rtb-0b06b7b85ec24fa18",
            "subnet_id": "subnet-0b8ec08c744c524c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.existing_private",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f7b13629007e8f",
            "route_table_id": "rtb-072788fbd3fa56795",
            "subnet_id": "subnet-0528f53b9f30ec4b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.existing_public",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:security-group/sg-074d9b07233a6bbf5",
            "description": "Security group for ECS app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074d9b07233a6bbf5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": null,
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "hello-world-app-sgTF",
            "name_prefix": "",
            "owner_id": "880147167393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hello-world-app-sgTF"
            },
            "tags_all": {
              "Name": "hello-world-app-sgTF"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "existing_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:subnet/subnet-0b8ec08c744c524c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ec08c744c524c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880147167393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Private-subnet-1"
            },
            "tags_all": {
              "name": "Private-subnet-1"
            },
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "existing_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:subnet/subnet-0528f53b9f30ec4b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0528f53b9f30ec4b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "880147167393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Public-subnet-2"
            },
            "tags_all": {
              "name": "Public-subnet-2"
            },
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:vpc/vpc-0c136aad7d8da35f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0553676690aa10cae",
            "default_route_table_id": "rtb-0b5cdd92db55ac8f9",
            "default_security_group_id": "sg-0fedac9090e05c6aa",
            "dhcp_options_id": "dopt-0ffeb54ece025a920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c136aad7d8da35f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5cdd92db55ac8f9",
            "owner_id": "880147167393",
            "tags": {
              "Name": "VPC-Private"
            },
            "tags_all": {
              "Name": "VPC-Private"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Privatelink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:880147167393:vpc-endpoint/vpce-09d4183fdf49bd23b",
            "dns_entry": [
              {
                "dns_name": "vpce-09d4183fdf49bd23b-xw37uxu9.vpce-svc-0469b2af269fc9f96.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09d4183fdf49bd23b-xw37uxu9-us-east-2b.vpce-svc-0469b2af269fc9f96.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09d4183fdf49bd23b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05035d113b98c6fce"
            ],
            "owner_id": "880147167393",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-074d9b07233a6bbf5"
            ],
            "service_name": "com.amazonaws.vpce.us-east-2.vpce-svc-0469b2af269fc9f96",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.45",
                "subnet_id": "subnet-0b8ec08c744c524c4"
              }
            ],
            "subnet_ids": [
              "subnet-0b8ec08c744c524c4"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c136aad7d8da35f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ECS_NLB",
            "aws_security_group.app_sg",
            "aws_subnet.existing_private",
            "aws_vpc.existing",
            "aws_vpc_endpoint_service.Endservice"
          ]
        }
      ]
    }
  ]
}